makes rc ready by dropping use of pattern matching switch